[lworld] runtime/AccModule/ConstModule.java fails with incorrect error message

XMLWordPrintable


      java.lang.RuntimeException: Wrong ClassFormatError exception: Invalid this class index 2 in constant pool in class file FooMod
      at ConstModule$1.findClass(ConstModule.java:122)
      at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:588)
      at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:521)
      at ConstModule.write_and_load(ConstModule.java:143)
      at ConstModule.main(ConstModule.java:50)

      There is a possibility that this is actually a mainline issue with the order of checking super and interfaces

            Assignee:
            Coleen Phillimore
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: