8294051: [lworld] runtime/AccModule/ConstModule.java fails with incorrect error message